--- a/src/scss/page/_top.scss
+++ b/src/scss/page/_top.scss
@@ -6,9 +6,18 @@
     &_mv {
     width: 100%;
     height: 100svh;
-       background-color: #666; 
+       background-color: blue; 
        display: flex;
        align-items: center;
        justify-content: center;
+
+       @include mq(md) { // 960px以下
+        background: red;
     }
+
+    @include mq(sm) { // 960px以下
+        background: green;
+    }
+    }
+
 }
